public/css/crystal-shards.css
html {
  position: relative;
  min-height: 100%;
}

body {
  padding-top: 3.5rem;
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}

h3 {
  font-size: 20px;
}

ul.not-list {
  padding-left: 0px;
}

ul.not-list li {
  list-style-type: none;
}

.nav-tabs {
  margin-bottom: 15px;
}

.space {
  height: 16px;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  line-height: 60px; /* Vertically center the text there */
  background-color: #f5f5f5;
}

.pagination {
  margin-top: 16px;
}

.search-wrap {
  width: 38%;
}

@media (max-width: 576px) {
  .search-wrap {
    margin-top: 10px;
    width: 100%;
  }
}

.navbar {
  background-color: #24292E!important;
}

.navbar-brand img {
  filter: invert(100%);
}

.has-search .form-control {
  padding-left: 2.375rem;
}

.has-search .form-control {
  border-radius: 2rem;
  border: 0;
  background-color: #404448;
  color: #87898c;
}

.has-search ::placeholder {
  color: #87898c!important;
}

.form-group.has-search {
  margin-bottom: 0;
  background-color: #24292E;
}

.has-search .form-control-feedback {
  position: absolute;
  z-index: 2;
  display: block;
  width: 2.375rem;
  height: 2.375rem;
  line-height: 2.375rem;
  text-align: center;
  pointer-events: none;
  color: #87898c;
}

.width-full {
  width: 100%!important;
}

.text-normal {
  font-weight: 600!important;
}

.css-truncate {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  vertical-align: top;
}

.dont-break-out {
  /* These are technically the same, but use both */
  overflow-wrap: break-word;
  word-wrap: break-word;

  -ms-word-break: break-all;
  /* This is the dangerous one in WebKit, as it breaks things wherever */
  word-break: break-all;
  /* Instead use this non-standard one: */
  word-break: break-word;

  /* Adds a hyphen where the word breaks, if supported (No Blink) */
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
}

.avatar_block .avatar {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 3px;
  background-color: #fff;
  border: 1px solid #dee2e6;
  width: 64px;
  height: 64px;
}

.home_heaeding__container {
  padding-bottom: 40px;
}

.home_repositories__container {
  position: relative;
  top: -74px
}

.avatar_block {
  position: relative;
  display: inline-block;
}

.avatar_block .badge {
  position: absolute;
  top: 52px;
  right: 45px;
}

.avatar_block .badge .fa-stack {
  font-size: 0.8em;
  color: black;
}
.avatar_block .badge i {
  vertical-align: middle;
}

.user__avatar img {
  width: 230px;
  height: 230px;
  border-radius: 6px!important;
}

.user__name .name {
  font-size: 26px;
  line-height: 30px;
  margin-top: 16px;
}

.user__name .login {
  font-size: 20px;
  font-weight: 300;
  line-height: 24px;
  color: #666;
}

.user__info {
  display: flex;
  padding-top: 15px;
}

.user__info_item {
  color: #586069;
  font-size: 14px;
  padding-right: 10px;
}

.shards__shard {
  display: flex;
  padding: 12px;
  margin-bottom: 12px;
  border-bottom: 1px solid #eee;
}

.shards__shard.forked {
  background: #f8f9fa;
}

.shards__shard_desc {
  margin-bottom: 8px;
  overflow-wrap: break-word;
}

.shards__shard_owner {
  display: inline-flex;
}

.shards__shard_owner_avatar img {
  width: 20px;
  margin-right: 5px;
}

.shards__shard_fork {
  font-size: 12px;
  color: #586069;
  margin-bottom: 8px;
  text-align: right;
}

.shards__shard_github ul {
  padding-left: 0;
  padding-top: 5px;
  margin-bottom: 0;
  font-size: 12px;
}

.shards__shard_github ul li {
  display: inline;
  padding-right: 5px;
  font-size: 14px;
  color: #586069!important;
}

.page__heading {
  padding-top: 40px;
  padding-bottom: 40px;
  margin-bottom: 30px;
  text-overflow: ellipsis;
  overflow:hidden;
  overflow-wrap: break-word;
  word-wrap: break-word;
  background-color: #fafbfc!important;
  border-bottom: 1px solid #e1e4e8!important;
  border-top: 1px solid #e1e4e8!important;
}

.page__heading .fork-flag {
  font-size: 13px;
  color: #586069;
  line-height: 10px;
}

.page__subheading {
  font-size: 60%;
  color: #808080;
}

.result_stats {
  font-size: 40%;
  line-height: 43px;
  padding-left: 16px;
  color: #808080;
}

.shard__header {
  padding-bottom: 40px;
}

.shard__main {
  top: -74px;
  padding-right: 0;
}

.shard__main .tab-content {
  padding-right: 15px;
}

.shard__statistic {
  border-left: 1px solid #e1e4e8;
}

.shard__intro {
  padding: 0;
}

.shard__topics {
  white-space: initial;
  margin-bottom: 5px;
}

.info-block {
  margin-bottom: 12px;
}

.list__items {
  margin-bottom: 5px;
}

.list__items a {
  color: #141c22;
}

.shard__owner {
  padding-top: 30px;
  border-top: 1px solid #c1c4ca;
  clear: both;
}

.repository__statistic {
  padding-left: 0px;
}

.shard__links {
  padding-left: 0px;
}

.shard__links a {
  color: #141c22;
}

.shard__release-wrap {
  font-weight: 800;
}

.shard__readme {
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.shard__see_all_link {
  margin-bottom: 10px;
}

.shard__see_all_link a {
  color: #c1c4ca;
  font-size: 14px;
  font-style: italic;
  font-weight: 500;
  text-decoration: none;
}

.shard__see_all_link a:after {
  margin-left: 3px;
  font-family: "Times New Roman", sans-serif;
  font-style: normal;
  content: "→";
}

.shard__readme img {
  max-width: 100%;
}

.shard__readme pre code {
  overflow: auto;
  overflow-y: hidden;
}

.list__heading {
  font-weight: 800;
  font-size: 12px;
  text-transform: uppercase;
  color: #a6aab2;
}

[data-toggle="collapse"] .fa:before {
  content: "\f139";
}

[data-toggle="collapse"].collapsed .fa:before {
  content: "\f13a";
}

.list__heading a {
  color: #a6aab2;
}

.list__heading a:hover {
  text-decoration: none;
}

@media (min-width : 768px) {
  #back-to-top {
    display: none;
  }
}
#back-to-top {
  position: fixed;
  bottom: 16px;
  right: 16px;
  z-index: 9999;
  cursor: pointer;
  text-decoration: none;
  transition: opacity 0.2s ease-out;
  opacity: 0;
}

.back-to-top-icon {
  width: 1em;
  height: 1em;
  vertical-align: middle;
  content: "";
  background: no-repeat center center;
  background-size: 100% 100%;
}

#back-to-top.show {
  opacity: 1;
}

.user_container {
  padding-top: 20px;
}

.users .user {
  padding: 16px;
  border-bottom: 1px solid #e1e4e8;
}

.users .user img.avatar {
  width: 64px;
  height: 64px;
}

.nav-tabs .nav-link {
  color: #586069;
  white-space: nowrap;
  border: 1px solid transparent;
  border-radius: 3px 3px 0 0;
}

.nav-tabs .nav-link.active {
  border-top: 3px solid;
  border-color: #e36209 #e1e4e8 transparent;
}

.nav-tabs .nav-link:hover {
  border-bottom-color: white;
}

.subnav .nav-link {
  color: #6a737d;
  cursor: pointer;
  border: 0;
  border-bottom: 2px solid transparent;
  transition: border-bottom-color .4s;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.subnav .nav-link.active {
  font-weight: 500;
  color: #1b1f23!important;
  border-bottom-color: #1074e7!important;
}

.subnav .nav-link:hover {
  color: #1b1f23!important;
  border-bottom-color: #E1E4E8;
}

#tags-cloud {
  width: 100%;
  height: 50vh;
}

